--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "foo.fullname" . }}
+  name: foo
   labels:
-    {{- include "foo.labels" . | nindent 4 }}
+    app: foo
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   ports:
     - port: {{ .Values.service.port }}
       targetPort: http
       protocol: TCP
       name: http
   selector:
-    {{- include "foo.selectorLabels" . | nindent 4 }}
+    app: foo
